src/objects/Appointment_Reminder__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category field for mapping the corresponding Email Template.</description>
        <label>Category</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Before_First_Email_Notification__c</fullName>
        <label>Days Before First Email Notification</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Before_First_SMS_notification__c</fullName>
        <label>Days Before First SMS notification</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Before_Second_Email_Notification__c</fullName>
        <label>Days Before Second Email Notification</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Before_Second_SMS_notification__c</fullName>
        <label>Days Before Second SMS notification</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmailTemplateId__c</fullName>
        <label>EmailTemplateId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMSTemplateId__c</fullName>
        <label>SMS Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Appointment Reminder</label>
</CustomObject>